_source/stylesheets/pages/_404.scss
.not-found-page {
	background: palette('white');
}

.not-found-page .site-header {
	margin-bottom: 0;

	background: transparent;

	box-shadow: none;
}

.not-found-page [role='banner'] > a {
	margin-right: auto;
	margin-left: auto;
}

.not-found-page article {
	@include aspect-ratio(3 x 1.5);

	max-width: none;

	padding-top: $line-height * 2em;
	padding-bottom: 0;
	margin-top: 0;
	margin-bottom: span(1);

	background-image: image('404--320w.jpg');
	background-position: 50% 50%;
	background-size: cover;

	box-shadow: 0 4px 2px palette('shadow');

	@include media('>=480px') {
		background-image: image('404--480w.jpg');
	}

	@include media('>=640px') {
		background-image: image('404--640w.jpg');
	}

	@include media('>=768px') {
		background-image: image('404--768w.jpg');
	}

	@include media('>=1024px') {
		background-image: image('404--1024w.jpg');
	}

	@include media('>=1280px') {
		background-image: image('404--1280w.jpg');
	}

	@include media('>=1600px') {
		background-image: image('404--1600w.jpg');
	}
}

.not-found-page h1 {
	@include visually-hidden;
}

.not-found-page p {
	@include image-replacement (false);
}

[href='/'] {
	position: absolute;
	top: 0;
	right: 0;
	bottom: 0;
	left: 0;
}

